--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ html{
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background-image: url(/assets/img/sliders/chicago.jpg);
+    background-image: url(./assets/img/sliders/chicago.jpg);
     background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
